test/functions/whereClauses/whereClauseNoFn.chpl
proc foo() where bar() {
  writeln("In foo");
}

foo();
